# F.R.E.T.-Board

./: LICENSE  README.md
boards/shield/v1/: amplifier.kicad_sch  dac.kicad_sch  fp-info-cache  input_amplifier.kicad_sch  input_filter.kicad_sch  inputlpf.kicad_sch  output_amplifier.kicad_sch  output_filter.kicad_sch  outputlpf.kicad_sch  rp2040_peripherals.kicad_sch  ui_components.kicad_sch  untitled.kicad_sch  v1-B_Cu.gbl  v1-B_Mask.gbs  v1-B_Paste.gbp  v1-B_Silkscreen.gbo  v1-Edge_Cuts.gm1  v1-F_Cu.gtl  v1-F_Mask.gts  v1-F_Paste.gtp  v1-F_Silkscreen.gto  v1-In1_Cu.g2  v1-In2_Cu.g3  v1-NPTH.drl  v1-PTH.drl  v1.csv  v1.kicad_pcb  v1.kicad_prl  v1.kicad_pro  v1.kicad_sch  v1.xml
boards/shield/v1/output/v1/: v1 - v1.csv  v1-B_Cu.gbl  v1-B_Mask.gbs  v1-B_Paste.gbp  v1-B_Silkscreen.gbo  v1-Edge_Cuts.gm1  v1-F_Cu.gtl  v1-F_Mask.gts  v1-F_Paste.gtp  v1-F_Silkscreen.gto  v1-In1_Cu.g2  v1-In2_Cu.g3  v1-NPTH-drl_map.gbr  v1-NPTH.drl  v1-PTH-drl_map.gbr  v1-PTH.drl  v1-all-pos - v1-all-pos.csv
boards/shield/v1/output/v2/: fretbom_v2.csv  fretcpl_v2.csv  v1-B_Cu.gbl  v1-B_Mask.gbs  v1-B_Paste.gbp  v1-B_Silkscreen.gbo  v1-Edge_Cuts.gm1  v1-F_Cu.gtl  v1-F_Mask.gts  v1-F_Paste.gtp  v1-F_Silkscreen.gto  v1-In1_Cu.g2  v1-In2_Cu.g3  v1-NPTH-drl_map.gbr  v1-NPTH.drl  v1-PTH-drl_map.gbr  v1-PTH.drl
code/: .gitignore  CMakeLists.txt
code/examples/: CMakeLists.txt
code/examples/adc_sfint/: CMakeLists.txt  ad7685.c  filters.c  main.c  util.c
code/examples/adc_to_dac/: CMakeLists.txt  main.c
code/examples/dac_sfint/: CMakeLists.txt  main.c
code/examples/filtering/: DSP_s7x16.c  a.out  filters.c  filters.h  graph.py  main.c  output.csv  test.c  test.py  util.c  util.h
code/examples/hello_world_ad7685/: CMakeLists.txt  hello_world_ad7685.c
code/examples/hello_world_dac8411/: CMakeLists.txt  hello_world_dac8411.c
code/examples/hello_world_serial/: CMakeLists.txt
code/examples/multicore_i2c/: CMakeLists.txt  ad7685.c  ad7685.h  ads7830.c  ads7830.h  filters.c  filters.h  main.c
code/examples/pio_ad7685/: ad7685.pio
code/examples/pio_dac8411/: dac8411.pio
code/examples/singlecore/: CMakeLists.txt  dac8411.c  filters.c  main.c
code/examples/sliders/: CMakeLists.txt  ads7830.c  main.c
code/examples/timer_singlecore/: CMakeLists.txt  ad7685.h  ads7830.h  dac8411.h  filters.h  main.c  pins.h
code/examples/zachs_old_stuff/: Arduino.cpp  Arduino.cpp:Zone.Identifier  Arduino.h  Arduino.h:Zone.Identifier  Wire.cpp  Wire.cpp:Zone.Identifier  Wire.h  Wire.h:Zone.Identifier  sequencer.pio  sequencer.pio:Zone.Identifier  serbus.cpp  serbus.cpp:Zone.Identifier
code/release/: CMakeLists.txt  ad7685.c  ad7685.h  ads7830.c  ads7830.h  dac8411.c  dac8411.h  filters.c  filters.h  main.c  refactored_filters.c  test.c
